/*
Copyright 2022 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package magma.dp;

import "google/protobuf/wrappers.proto";

import "dp/protos/pagination.proto";

option go_package = "magma/dp/cloud/go/protos";

service LogFetcher {
  rpc ListLogs(ListLogsRequest) returns (ListLogsResponse) {}
}

message ListLogsRequest {
  string network_id = 1;
  LogFilter filter = 2;
  Pagination pagination = 3;
}

message LogFilter {
  string from = 1;
  string to = 2;
  string name = 3;
  string serial_number = 4;
  string fcc_id = 5;
  google.protobuf.Int64Value response_code = 6;
  google.protobuf.Int64Value begin_timestamp_milli = 7;
  google.protobuf.Int64Value end_timestamp_milli = 8;
}

message ListLogsResponse {
  repeated Log logs = 1;
}

message Log {
  string from = 1;
  string to = 2;
  string name = 3;
  string message = 4;
  string serial_number = 5;
  string fcc_id = 6;
  int64 timestamp_milli = 7;
}
